Moved configuration into ./Configuration namespace

--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -45,23 +45,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Base\Configuration\Abstract\IConfigurationEnumTable.cs" />
     <Compile Include="Base\Abstract\IContentGenerator.cs" />
     <Compile Include="Base\Abstract\IDalGenerator.cs" />
     <Compile Include="Base\Abstract\IFileWriter.cs" />
     <Compile Include="Base\Abstract\IObstacleManager.cs" />
     <Compile Include="Base\Abstract\IProjectItemManager.cs" />
     <Compile Include="Base\Abstract\IProgressReporter.cs" />
+    <Compile Include="Base\Configuration\Concrete\ConfigurationEnumTable.cs" />
     <Compile Include="Base\ContentGenerator.cs" />
     <Compile Include="Base\DalGenerator.cs" />
     <Compile Include="Base\DalWriter.cs" />
     <Compile Include="Base\DatabaseSchema.cs" />
     <Compile Include="Base\DatabaseSchemaReader.cs" />
-    <Compile Include="Base\Abstract\IConfiguration.cs" />
+    <Compile Include="Base\Configuration\Abstract\IConfiguration.cs" />
     <Compile Include="Base\Abstract\IDatabaseSchema.cs" />
     <Compile Include="Base\Abstract\IDatabaseSchemaReader.cs" />
     <Compile Include="Base\GenerationContext.cs" />
     <Compile Include="Base\Genie.cs" />
-    <Compile Include="Base\GenieConfiguration.cs" />
+    <Compile Include="Base\Configuration\Concrete\GenieConfiguration.cs" />
     <Compile Include="Base\GenieGenerationResult.cs" />
     <Compile Include="Base\CSharpProjectItemManager.cs" />
     <Compile Include="Base\NonFunctionningProgressReporter.cs" />
