--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -46,8 +46,8 @@
     <Compile Include="Base\Generating\Absract\IContentGenerator.cs" />
     <Compile Include="Base\Generating\Absract\IDalGenerator.cs" />
     <Compile Include="Base\Writing\Abstract\IFileWriter.cs" />
-    <Compile Include="Base\Abstract\IObstacleManager.cs" />
-    <Compile Include="Base\Abstract\IProjectItemManager.cs" />
+    <Compile Include="Base\ObstacleManaging\Abstract\IObstacleManager.cs" />
+    <Compile Include="Base\ProjectFileManaging\Abstract\IProjectItemManager.cs" />
     <Compile Include="Base\Abstract\IProgressReporter.cs" />
     <Compile Include="Base\Configuration\Concrete\ConfigurationEnumTable.cs" />
     <Compile Include="Base\Generating\Concrete\ContentGenerator.cs" />
@@ -62,9 +62,9 @@
     <Compile Include="Base\Genie.cs" />
     <Compile Include="Base\Configuration\Concrete\GenieConfiguration.cs" />
     <Compile Include="Base\Generating\Concrete\GenieGenerationResult.cs" />
-    <Compile Include="Base\CSharpProjectItemManager.cs" />
+    <Compile Include="Base\ProjectFileManaging\Concrete\CSharpProjectItemManager.cs" />
     <Compile Include="Base\NonFunctionningProgressReporter.cs" />
-    <Compile Include="Base\ObstacleManager.cs" />
+    <Compile Include="Base\ObstacleManaging\Concrete\ObstacleManager.cs" />
     <Compile Include="Extensions\CharExtensions.cs" />
     <Compile Include="Models\Abstract\IAttribute.cs" />
     <Compile Include="Models\Abstract\IContentFile.cs" />
