--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Base\Generating\Concrete\DalGenerator.cs" />
     <Compile Include="Base\Writing\Concrete\DalWriter.cs" />
     <Compile Include="Base\Reading\Concrete\DatabaseSchema.cs" />
-    <Compile Include="Base\Reading\Concrete\DatabaseSchemaReader.cs" />
+    <Compile Include="Base\Reading\Concrete\SQLServerSchemaReader.cs" />
     <Compile Include="Base\Configuration\Abstract\IConfiguration.cs" />
     <Compile Include="Base\Reading\Abstract\IDatabaseSchema.cs" />
     <Compile Include="Base\Reading\Abstract\IDatabaseSchemaReader.cs" />
@@ -68,20 +68,21 @@
     <Compile Include="Extensions\CharExtensions.cs" />
     <Compile Include="Models\Abstract\IAttribute.cs" />
     <Compile Include="Models\Abstract\IContentFile.cs" />
+    <Compile Include="Models\Abstract\IEnum.cs" />
     <Compile Include="Models\Abstract\IForeignKeyAttribute.cs" />
     <Compile Include="Models\Abstract\IReferenceList.cs" />
     <Compile Include="Models\Abstract\IRelation.cs" />
     <Compile Include="Models\Abstract\IStoredProcedure.cs" />
     <Compile Include="Models\Abstract\IView.cs" />
     <Compile Include="Models\Abstract\ISimpleAttribute.cs" />
-    <Compile Include="Models\Attribute.cs" />
-    <Compile Include="Models\ContentFile.cs" />
-    <Compile Include="Models\ForeignKeyAttribute.cs" />
-    <Compile Include="Models\ReferenceList.cs" />
-    <Compile Include="Models\Relation.cs" />
-    <Compile Include="Models\SimpleAttribute.cs" />
-    <Compile Include="Models\StoredProcedure.cs" />
-    <Compile Include="Models\View.cs" />
+    <Compile Include="Models\Concrete\Attribute.cs" />
+    <Compile Include="Models\Concrete\ContentFile.cs" />
+    <Compile Include="Models\Concrete\ForeignKeyAttribute.cs" />
+    <Compile Include="Models\Concrete\ReferenceList.cs" />
+    <Compile Include="Models\Concrete\Relation.cs" />
+    <Compile Include="Models\Concrete\SimpleAttribute.cs" />
+    <Compile Include="Models\Concrete\StoredProcedure.cs" />
+    <Compile Include="Models\Concrete\View.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Templates\Dapper\CommandDefinition.cs">
@@ -607,9 +608,7 @@
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Base\Abstract\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Content Include="Templates\Dapper\CommandDefinition.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
