Major filtering bug fixed

--- a/Genie/Genie.csproj
+++ b/Genie/Genie.csproj
@@ -33,7 +33,7 @@
   <ItemGroup>
     <Reference Include="Microsoft.Build" />
     <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:\Projects\Generator\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
       <Private>True</Private>
     </Reference>
     <Reference Include="System" />
@@ -605,13 +605,14 @@
     <Compile Include="Base\ProcessOutput\Concrete\NonFunctioningProcessOutput.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
     <Compile Include="Templates\Extensions\Filters.Concrete.cs" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Templates\Dapper\CommandDefinition.tt">
       <Generator>TextTemplatingFilePreprocessor</Generator>
