New Build Scripts

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
-language: csharp
 dist: trusty
 sudo: required
 mono: none
-dotnet: 1.0.1
+dotnet: 1.0.0-preview2-1-003177
+branches:
+  only:
+    - core
+before_script:
+  - chmod a+x ./GenieCLI/travis-build.sh
 script:
-  - ./GenieCLI/build.sh --quiet verify
+  - ./GenieCLI/travis-build.sh
+notifications:
+  email:
+    on_success: never
+    on_failure: always
