--- a/.travis.yml
+++ b/.travis.yml
@@ -6,9 +6,9 @@ branches:
   only:
     - core
 before_script:
-  - chmod a+x ./GenieCLI/travis-build.sh
+  - chmod a+x ./travis-build.sh
 script:
-  - ./GenieCLI/travis-build.sh
+  - ./travis-build.sh
 notifications:
   email:
     on_success: never
