--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ branches:
 before_script:
   - chmod a+x ./travis-build.sh
 script:
-  - ./travis-build.sh
+  - dotnet restore
+  - dotnet build
 notifications:
   email:
     on_success: never
