--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,10 @@
+addons:
+  apt:
+    sources:
+    - sourceline: 'deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/ trusty main'
+      key_url: 'https://apt-mo.trafficmanager.net/keys/microsoft.asc'
+    packages:
+    - dotnet-dev-1.0.1
 dist: trusty
 sudo: required
 mono: none
