--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,10 @@ deploy:
     - /home/travis/build/rusith/Genie/genieCLI_osx-x64-${TRAVIS_TAG}.zip
   skip_cleanup: true
   before_deploy:
-  - "./travis-beforedeploy.sh"
+  -  echo "${PWD}"
+  - zip -r genieCLI_win-x64-${TRAVIS_TAG}.zip /home/travis/build/rusith/Genie/GenieCLI/bin/release/netcoreapp1.1/win10-x64/publish
+  - zip -r genieCLI_linux-x64-${TRAVIS_TAG}.zip /home/travis/build/rusith/Genie/GenieCLI/bin/release/netcoreapp1.1/ubuntu.16.10-x64/publish
+  - zip -r genieCLI_osx-x64-${TRAVIS_TAG}.zip /home/travis/build/rusith/Genie/GenieCLI/bin/release/netcoreapp1.1/osx.10.11-x64/publish
   on:
     repo: rusith/Genie
     branch: core
