--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
-# addons:
-#   apt:
-#     sources:
-#     - sourceline: deb [arch=amd64] https://apt-mo.trafficmanager.net/repos/dotnet-release/
-#         trusty main
-#       key_url: https://apt-mo.trafficmanager.net/keys/microsoft.asc
-#     packages:
-#     - dotnet-sdk-2.0.3
+addons:
+  apt:
+    sources:
+    - sourceline: deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-zesty-prod zesty main
+        trusty main
+      key_url: https://packages.microsoft.com/keys/microsoft.asc
+    packages:
+    - dotnet-sdk-2.0.3
 dist: trusty
 sudo: required
 mono: none
