--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
     - sourceline: deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-ubuntu-zesty-prod zesty main
       key_url: https://packages.microsoft.com/keys/microsoft.asc
     packages:
+    - dotnet-runtime-2.0.3
     - dotnet-sdk-2.0.3
 dist: trusty
 sudo: required
