--- a/GenieCLI/GenieCLI.csproj
+++ b/GenieCLI/GenieCLI.csproj
@@ -7,7 +7,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RuntimeIdentifiers>win10-x64;osx-x64;ubuntu.16.10-x64</RuntimeIdentifiers>    
+    <RuntimeIdentifiers>win10-x64;osx-x64;ubuntu-x64</RuntimeIdentifiers>    
   </PropertyGroup>
 
 </Project>
