--- a/GenieCLI/GenieCLI.csproj
+++ b/GenieCLI/GenieCLI.csproj
@@ -1,13 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <ItemGroup>
     <ProjectReference Include="..\Genie\Genie.Core.csproj" />
   </ItemGroup>
-
+  <ItemGroup>
+    <PackageReference Include="ShellProgressBar" Version="4.0.0" />
+  </ItemGroup>
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <RuntimeIdentifiers>win10-x64;osx-x64;ubuntu-x64</RuntimeIdentifiers>    
+    <RuntimeIdentifiers>win10-x64;osx-x64;ubuntu-x64</RuntimeIdentifiers>
   </PropertyGroup>
-
 </Project>
