--- a/Genie/Genie.Core.csproj
+++ b/Genie/Genie.Core.csproj
@@ -7,5 +7,6 @@
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.4.0" />
+    <PackageReference Include="xxHashSharp" Version="1.0.0" />
   </ItemGroup>
 </Project>
