--- a/Genie.Tests/Genie.Tests.csproj
+++ b/Genie.Tests/Genie.Tests.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <IsPackable>false</IsPackable>
+    <DebugType>full</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
@@ -12,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Genie\Genie.Core.csproj" />
+    <ProjectReference Include="..\GenieCLI\GenieCLI.csproj" />
   </ItemGroup>
 </Project>
