--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,11 @@
+image: Visual Studio 2017
 before_build:
 - nuget restore
 - choco install opencover.portable
 - choco install codecov
-- choco install dotnetcore-sdk
-
-build_script:
-- dotnet build Genie.Tests
-
 
 test_script:
 - cd Genie.Tests
-- OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:test -output:".\Coverage.xml" -oldstyle
-- codecov -f ".\Coverage.xml"
+- dotnet build
+- OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" targetargs:"test Genie.Tests" -output:".\Coverage.xml" -oldstyle
+- codecov -f ".\Coverage.xml" -t 2a219bc0-2479-4e8b-8414-c81e89eee6aa
