--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,7 @@ before_build:
 
 test_script:
 - cd Genie.Tests
+- echo 
 - dotnet build
-- OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" targetargs:"test Genie.Tests" -output:".\Coverage.xml" -oldstyle
+- OpenCover.Console.exe -register:user -target:"C:/Program Files/dotnet/dotnet.exe" -targetargs:"test ." -output:".\Coverage.xml" -oldstyle
 - codecov -f ".\Coverage.xml" -t 2a219bc0-2479-4e8b-8414-c81e89eee6aa
