--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ deploy:
     - ${TRAVIS_BUILD_DIR}/genieCLI_osx-x64-${TRAVIS_TAG}.zip
   skip_cleanup: true
   on:
-    repo: rusith/Genie
+    repo: GenieDotNet/Genie
     branch: core
     tags: true
 env:
