--- a/Genie/Genie.Core.csproj
+++ b/Genie/Genie.Core.csproj
@@ -7,6 +7,7 @@
     <Compile Remove="Templates\Infrastructure\Models\Concrete\Context\BaseQueryContext.cs" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="DotLiquid" Version="2.0.262" />
     <PackageReference Include="MySqlConnector" Version="0.26.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
     <PackageReference Include="System.Data.Common" Version="4.3.0" />
